--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
   "author": "Joseph <joseph@josephbanks.me>",
   "license": "MIT",
   "private": true,
-  "dependancies": {
-    "websocket": "1.0.25"
+  "dependencies": {
+    "websocket": "^1.0.25"
+  },
+  "devDependencies": {
+    "eslint-config-google": "^0.9.1"
   }
 }
