--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   "license": "MIT",
   "private": true,
   "dependencies": {
-    "websocket": "^1.0.25"
+    "websocket": "^1.0.25",
+    "snekfetch": "^3.5.8"
   },
   "devDependencies": {
     "eslint-config-google": "^0.9.1"
